# Within-Context-Attention-Phase-Transition-Analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: phase_c1.yaml
dashboard/: package-lock.json
dashboard/src/: App.jsx
docs/: FINDINGS.md
results/: patch_manifest.csv  patch_manifest_range.csv
src/attn_phase/: __init__.py  cli.py  metrics.py  patch.py  run_p1_pilot.py  run_p1_pilot_range.py  runner.py  stats.py  tasks.py
tests/: test_answer_matching.py  test_metrics.py  test_patch.py  test_stats.py  test_tasks.py
